--- a/StackQA/Base.lproj/Main.storyboard
+++ b/StackQA/Base.lproj/Main.storyboard
@@ -82,11 +82,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" id="NRn-w3-auz">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="bCr-2z-dpc" customClass="QuestionsTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NRn-w3-auz" id="qoo-hY-Fgk">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bCr-2z-dpc" id="VjC-4f-ldb">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="pFr-hn-FVY" kind="show" identifier="showQuestion" id="cHy-aY-Jda"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -97,14 +100,57 @@
                     <navigationItem key="navigationItem" id="sg6-KG-QUD">
                         <barButtonItem key="rightBarButtonItem" title="+" id="2FM-gE-IYr">
                             <connections>
-                                <segue destination="L2G-jD-e0s" kind="presentation" id="Xhh-Td-jKZ"/>
+                                <segue destination="L2G-jD-e0s" kind="presentation" identifier="" id="Xhh-Td-jKZ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUx-wJ-w8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1051" y="364"/>
+            <point key="canvasLocation" x="671" y="364"/>
+        </scene>
+        <!--Question Detail View Controller-->
+        <scene sceneID="fK1-Ec-4JK">
+            <objects>
+                <viewController id="pFr-hn-FVY" customClass="QuestionDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jbq-l4-GlU"/>
+                        <viewControllerLayoutGuide type="bottom" id="TMo-4t-geV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ALP-UC-2EU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label awdaw" lineBreakMode="tailTruncation" numberOfLines="11" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2P-w2-mVy">
+                                <rect key="frame" x="16" y="28" width="550" height="103"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JnK-FV-cr1">
+                                <rect key="frame" x="16" y="139" width="568" height="441"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JnK-FV-cr1" firstAttribute="trailing" secondItem="ALP-UC-2EU" secondAttribute="trailingMargin" id="7Sl-k1-DCA"/>
+                            <constraint firstItem="r2P-w2-mVy" firstAttribute="leading" secondItem="ALP-UC-2EU" secondAttribute="leadingMargin" id="bPJ-XN-FB6"/>
+                            <constraint firstItem="JnK-FV-cr1" firstAttribute="leading" secondItem="ALP-UC-2EU" secondAttribute="leadingMargin" id="rJF-eZ-u5s"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="r2P-w2-mVy" secondAttribute="trailing" constant="18" id="ybW-XX-IPc"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="questionText" destination="JnK-FV-cr1" id="NKz-pP-Hpp"/>
+                        <outlet property="questionTitle" destination="r2P-w2-mVy" id="Q8G-uH-zfM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BX7-Zd-dFs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1482" y="811"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Vp4-YP-QvJ">
@@ -122,7 +168,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RYB-Iz-YZH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="239" y="364"/>
+            <point key="canvasLocation" x="-144" y="364"/>
         </scene>
     </scenes>
 </document>
