--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -235,9 +235,28 @@
                     <view key="view" contentMode="scaleToFill" id="weJ-L6-Y6Q">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YIL-3W-YXa">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="kgS-JK-QkK">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kgS-JK-QkK" id="YSO-VP-50w">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="IMj-m5-2Oo" id="oY9-Fv-mcJ"/>
+                                    <outlet property="delegate" destination="IMj-m5-2Oo" id="lin-MV-nnb"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="YIL-3W-YXa" id="MSx-b5-CIN"/>
                         <segue destination="KLZ-vb-tiT" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="q7s-0n-Fwe"/>
                     </connections>
                 </viewController>
@@ -318,7 +337,7 @@
         <image name="plus-32.png" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="BUM-xm-AeU"/>
+        <segue reference="q7s-0n-Fwe"/>
         <segue reference="Xhh-Td-jKZ"/>
     </inferredMetricsTieBreakers>
 </document>
