implement showing popup with actions in question detail view

--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -188,6 +188,9 @@
                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="8TF-aP-r7l" kind="show" identifier="answers_list" id="g3P-Gf-qaj"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O0q-iY-qwK">
                                         <rect key="frame" x="505" y="8" width="78" height="44"/>
@@ -196,12 +199,18 @@
                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="J1w-mx-Vas" kind="show" identifier="comments_list" id="l36-yP-Kfk"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKF-Eg-n6W">
                                         <rect key="frame" x="273" y="8" width="55" height="44"/>
                                         <state key="normal" backgroundImage="move9.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="questionPopupView:" destination="Xug-EA-AjG" eventType="touchUpInside" id="FPI-fY-pzR"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -242,6 +251,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ca-ye-tND" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1802" y="1284"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6wN-md-VlH">
+            <objects>
+                <viewController id="J1w-mx-Vas" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xEa-I3-6RA"/>
+                        <viewControllerLayoutGuide type="bottom" id="tQt-t1-jCa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jcU-OT-gbD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oH0-O3-a2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2286" y="2030"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Ril-Kc-HAW">
+            <objects>
+                <viewController id="8TF-aP-r7l" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="or3-4b-f6C"/>
+                        <viewControllerLayoutGuide type="bottom" id="4g9-Us-o0O"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zDd-kj-TbV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sew-bl-tWO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1352" y="2030"/>
         </scene>
         <!--Sidebar View Controller-->
         <scene sceneID="TC2-OV-4BK">
